--- a/Css/style.css
+++ b/Css/style.css
@@ -7,10 +7,19 @@ html,body{
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+.divider:after,
+.divider:before {
+content: "";
+flex: 1;
+height: 1px;
+background: #eee;
+}
+
+/* 
 .container{
   display: flex;
   flex-direction: column;
-  max-width: 90%;
+  max-width: 70%;
   margin: 30px auto;
 }
 
@@ -24,6 +33,7 @@ html,body{
   color: #432000;
   background-color:  rgb(231, 230, 230);
 
+  max-width: 70%;
   border: 0;
   padding: 15px;
   border-radius: 8px;
@@ -32,6 +42,11 @@ html,body{
   font-family: 'Roboto Condensed', sans-serif;
   margin: 10px 0;
 }
+
+.below{
+  margin-bottom: 60px;
+}
+
 
 .add-button{
   color: #FDFDFD;
@@ -48,4 +63,4 @@ html,body{
 
 p{
   text-align: center;
-}
+} */
