--- a/Css/Number.css
+++ b/Css/Number.css
@@ -68,3 +68,9 @@ body {
   justify-content: center;
   text-align: center;
 }
+
+.btn-group, .btn-group-vertical {
+  display: flex;
+  padding: 5px 0px 5px 0px;
+  justify-content: center;
+}
