--- a/Css/Number.css
+++ b/Css/Number.css
@@ -77,14 +77,14 @@ body {
 
 .modal_flash{ 
   background: linear-gradient(135deg, rgba(0, 255, 0, 0.8), rgba(0, 128, 0, 0.2));
-}
-
-.modal_flash{ 
-  background: linear-gradient(135deg, rgba(0, 255, 0, 0.8), rgba(0, 128, 0, 0.2));
   transition: background 0.5s; /* Add a smooth transition effect */
 }
 
 .modal_flash_red {
   background: linear-gradient(135deg, rgba(255, 0, 0, 0.8), rgba(128, 0, 0, 0.2));
   transition: background 0.5s; /* Add a smooth transition effect */
+}
+
+.container{
+  width: 90%;
 }
